--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.53.0",
     "react-native-cli": "^2.0.1",
     "react-native-image-crop-picker": "^0.19.3",
+    "react-native-progress": "^3.4.0",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.7",
